src/y.output
   0  $accept : program_plum $end

   1  program_plum : program

   2  program : program var_decl
   3          | program func_decl
   4          | program func_def
   5          |

   6  var_decl : scalar_decl
   7           | array_decl
   8           | const_decl

   9  scalar_decl : var_type init_list ';'

  10  var_type : INT
  11           | FLOAT
  12           | DOUBLE
  13           | CHAR

  14  init_list : init_unit
  15            | init_list ',' init_unit

  16  init_unit : ID
  17            | ID '=' expr

  18  expr : expr '+' expr
  19       | expr '-' expr
  20       | expr '*' expr
  21       | expr '/' expr
  22       | expr '%' expr
  23       | expr '<' expr
  24       | expr LESS_EQ expr
  25       | expr '>' expr
  26       | expr GREAT_EQ expr
  27       | expr EQUAL expr
  28       | expr NOT_EQ expr
  29       | expr LOG_AND expr
  30       | expr LOG_OR expr
  31       | expr '&' expr
  32       | expr '|' expr
  33       | '!' expr
  34       | '(' expr ')'
  35       | '+' expr
  36       | '-' expr
  37       | INCRE ID
  38       | INCRE id_arr_access
  39       | ID INCRE
  40       | id_arr_access INCRE
  41       | DECRE ID
  42       | DECRE id_arr_access
  43       | ID DECRE
  44       | id_arr_access DECRE
  45       | ID '=' expr
  46       | id_arr_access '=' expr
  47       | func_invoc
  48       | ID
  49       | id_arr_access
  50       | literal

  51  id_arr_access : ID access_list

  52  access_list : access_list '[' expr ']'
  53              | '[' expr ']'

  54  func_invoc : ID '(' argument_list ')'
  55             | ID '(' ')'

  56  argument_list : argument_list ',' expr
  57                | expr

  58  literal : NUM_INT
  59          | NUM_FLOATING
  60          | CHARACTER
  61          | STRING

  62  array_decl : var_type init_list_arr ';'

  63  init_list_arr : init_unit_arr
  64                | init_list_arr ',' init_unit_arr

  65  init_unit_arr : id_arr_decl
  66                | id_arr_decl '=' arr_content

  67  id_arr_decl : ID arr_decl_list

  68  arr_decl_list : arr_decl_list '[' NUM_INT ']'
  69                | '[' NUM_INT ']'
  70                | arr_decl_list '[' '+' NUM_INT ']'
  71                | '[' '+' NUM_INT ']'
  72                | arr_decl_list '[' '-' NUM_INT ']'
  73                | '[' '-' NUM_INT ']'

  74  arr_content : '{' expr_list '}'
  75              | '{' arr_content_list '}'

  76  expr_list : expr
  77            | expr_list ',' expr

  78  arr_content_list : arr_content
  79                   | arr_content_list ',' arr_content

  80  const_decl : CONST var_type init_list ';'

  81  func_decl : var_type ID '(' param_list ')' ';'
  82            | VOID ID '(' param_list ')' ';'
  83            | var_type ID '(' ')' ';'
  84            | VOID ID '(' ')' ';'

  85  param_list : param_list ',' param_unit
  86             | param_unit

  87  param_unit : var_type ID

  88  statement : stmt_expression
  89            | stmt_if
  90            | stmt_switch
  91            | stmt_while
  92            | stmt_for
  93            | stmt_return
  94            | stmt_break
  95            | stmt_continue
  96            | compound_statement

  97  statements : statements statement
  98             | statement

  99  $$1 :

 100  compound_statement : '{' $$1 '}'

 101  $$2 :

 102  compound_statement : '{' $$2 statement_var_decls '}'

 103  statement_var_decls : statement_var_decls statement_var_decl
 104                      | statement_var_decl

 105  statement_var_decl : statement
 106                     | var_decl

 107  stmt_expression : expr ';'

 108  stmt_if : IF '(' expr ')' compound_statement
 109          | IF '(' expr ')' compound_statement ELSE compound_statement

 110  stmt_switch : SWITCH '(' expr ')' '{' switch_clauses '}'
 111              | SWITCH '(' expr ')' '{' '}'

 112  switch_clauses : switch_clauses switch_clause
 113                 | switch_clause

 114  switch_clause : CASE NUM_INT ':' statements
 115                | CASE NUM_INT ':'
 116                | CASE '+' NUM_INT ':' statements
 117                | CASE '+' NUM_INT ':'
 118                | CASE '-' NUM_INT ':' statements
 119                | CASE '-' NUM_INT ':'
 120                | DEFAULT ':' statements
 121                | DEFAULT ':'

 122  stmt_while : WHILE '(' expr ')' statement
 123             | DO statement WHILE '(' expr ')' ';'

 124  stmt_for : FOR '(' expr_empty ';' expr_empty ';' expr_empty ')' statement

 125  expr_empty : expr
 126             |

 127  stmt_return : RETURN ';'
 128              | RETURN expr ';'

 129  stmt_break : BREAK ';'

 130  stmt_continue : CONTINUE ';'

 131  $$3 :

 132  func_def : var_type ID '(' param_list ')' $$3 compound_statement

 133  $$4 :

 134  func_def : VOID ID '(' param_list ')' $$4 compound_statement

 135  $$5 :

 136  func_def : var_type ID '(' ')' $$5 compound_statement

 137  $$6 :

 138  func_def : VOID ID '(' ')' $$6 compound_statement

state 0
	$accept : . program_plum $end  (0)
	program : .  (5)

	.  reduce 5

	program_plum  goto 1
	program  goto 2


state 1
	$accept : program_plum . $end  (0)

	$end  accept


state 2
	program_plum : program .  (1)
	program : program . var_decl  (2)
	program : program . func_decl  (3)
	program : program . func_def  (4)

	VOID  shift 3
	INT  shift 4
	FLOAT  shift 5
	CHAR  shift 6
	DOUBLE  shift 7
	CONST  shift 8
	$end  reduce 1

	var_decl  goto 9
	scalar_decl  goto 10
	const_decl  goto 11
	var_type  goto 12
	array_decl  goto 13
	func_decl  goto 14
	func_def  goto 15


state 3
	func_decl : VOID . ID '(' param_list ')' ';'  (82)
	func_decl : VOID . ID '(' ')' ';'  (84)
	func_def : VOID . ID '(' param_list ')' $$4 compound_statement  (134)
	func_def : VOID . ID '(' ')' $$6 compound_statement  (138)

	ID  shift 16
	.  error


state 4
	var_type : INT .  (10)

	.  reduce 10


state 5
	var_type : FLOAT .  (11)

	.  reduce 11


state 6
	var_type : CHAR .  (13)

	.  reduce 13


state 7
	var_type : DOUBLE .  (12)

	.  reduce 12


state 8
	const_decl : CONST . var_type init_list ';'  (80)

	INT  shift 4
	FLOAT  shift 5
	CHAR  shift 6
	DOUBLE  shift 7
	.  error

	var_type  goto 17


state 9
	program : program var_decl .  (2)

	.  reduce 2


state 10
	var_decl : scalar_decl .  (6)

	.  reduce 6


state 11
	var_decl : const_decl .  (8)

	.  reduce 8


state 12
	scalar_decl : var_type . init_list ';'  (9)
	array_decl : var_type . init_list_arr ';'  (62)
	func_decl : var_type . ID '(' param_list ')' ';'  (81)
	func_decl : var_type . ID '(' ')' ';'  (83)
	func_def : var_type . ID '(' param_list ')' $$3 compound_statement  (132)
	func_def : var_type . ID '(' ')' $$5 compound_statement  (136)

	ID  shift 18
	.  error

	init_list  goto 19
	init_unit  goto 20
	init_list_arr  goto 21
	init_unit_arr  goto 22
	id_arr_decl  goto 23


state 13
	var_decl : array_decl .  (7)

	.  reduce 7


state 14
	program : program func_decl .  (3)

	.  reduce 3


state 15
	program : program func_def .  (4)

	.  reduce 4


state 16
	func_decl : VOID ID . '(' param_list ')' ';'  (82)
	func_decl : VOID ID . '(' ')' ';'  (84)
	func_def : VOID ID . '(' param_list ')' $$4 compound_statement  (134)
	func_def : VOID ID . '(' ')' $$6 compound_statement  (138)

	'('  shift 24
	.  error


state 17
	const_decl : CONST var_type . init_list ';'  (80)

	ID  shift 25
	.  error

	init_list  goto 26
	init_unit  goto 20


state 18
	init_unit : ID .  (16)
	init_unit : ID . '=' expr  (17)
	id_arr_decl : ID . arr_decl_list  (67)
	func_decl : var_type ID . '(' param_list ')' ';'  (81)
	func_decl : var_type ID . '(' ')' ';'  (83)
	func_def : var_type ID . '(' param_list ')' $$3 compound_statement  (132)
	func_def : var_type ID . '(' ')' $$5 compound_statement  (136)

	'('  shift 27
	'['  shift 28
	'='  shift 29
	';'  reduce 16
	','  reduce 16

	arr_decl_list  goto 30


state 19
	scalar_decl : var_type init_list . ';'  (9)
	init_list : init_list . ',' init_unit  (15)

	';'  shift 31
	','  shift 32
	.  error


state 20
	init_list : init_unit .  (14)

	.  reduce 14


state 21
	array_decl : var_type init_list_arr . ';'  (62)
	init_list_arr : init_list_arr . ',' init_unit_arr  (64)

	';'  shift 33
	','  shift 34
	.  error


state 22
	init_list_arr : init_unit_arr .  (63)

	.  reduce 63


state 23
	init_unit_arr : id_arr_decl .  (65)
	init_unit_arr : id_arr_decl . '=' arr_content  (66)

	'='  shift 35
	';'  reduce 65
	','  reduce 65


state 24
	func_decl : VOID ID '(' . param_list ')' ';'  (82)
	func_decl : VOID ID '(' . ')' ';'  (84)
	func_def : VOID ID '(' . param_list ')' $$4 compound_statement  (134)
	func_def : VOID ID '(' . ')' $$6 compound_statement  (138)

	INT  shift 4
	FLOAT  shift 5
	CHAR  shift 6
	DOUBLE  shift 7
	')'  shift 36
	.  error

	var_type  goto 37
	param_list  goto 38
	param_unit  goto 39


state 25
	init_unit : ID .  (16)
	init_unit : ID . '=' expr  (17)

	'='  shift 29
	';'  reduce 16
	','  reduce 16


state 26
	init_list : init_list . ',' init_unit  (15)
	const_decl : CONST var_type init_list . ';'  (80)

	';'  shift 40
	','  shift 32
	.  error


state 27
	func_decl : var_type ID '(' . param_list ')' ';'  (81)
	func_decl : var_type ID '(' . ')' ';'  (83)
	func_def : var_type ID '(' . param_list ')' $$3 compound_statement  (132)
	func_def : var_type ID '(' . ')' $$5 compound_statement  (136)

	INT  shift 4
	FLOAT  shift 5
	CHAR  shift 6
	DOUBLE  shift 7
	')'  shift 41
	.  error

	var_type  goto 37
	param_list  goto 42
	param_unit  goto 39


state 28
	arr_decl_list : '[' . NUM_INT ']'  (69)
	arr_decl_list : '[' . '+' NUM_INT ']'  (71)
	arr_decl_list : '[' . '-' NUM_INT ']'  (73)

	'+'  shift 43
	'-'  shift 44
	NUM_INT  shift 45
	.  error


state 29
	init_unit : ID '=' . expr  (17)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 57
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 30
	id_arr_decl : ID arr_decl_list .  (67)
	arr_decl_list : arr_decl_list . '[' NUM_INT ']'  (68)
	arr_decl_list : arr_decl_list . '[' '+' NUM_INT ']'  (70)
	arr_decl_list : arr_decl_list . '[' '-' NUM_INT ']'  (72)

	'['  shift 61
	';'  reduce 67
	','  reduce 67
	'='  reduce 67


state 31
	scalar_decl : var_type init_list ';' .  (9)

	.  reduce 9


state 32
	init_list : init_list ',' . init_unit  (15)

	ID  shift 25
	.  error

	init_unit  goto 62


state 33
	array_decl : var_type init_list_arr ';' .  (62)

	.  reduce 62


state 34
	init_list_arr : init_list_arr ',' . init_unit_arr  (64)

	ID  shift 63
	.  error

	init_unit_arr  goto 64
	id_arr_decl  goto 23


state 35
	init_unit_arr : id_arr_decl '=' . arr_content  (66)

	'{'  shift 65
	.  error

	arr_content  goto 66


state 36
	func_decl : VOID ID '(' ')' . ';'  (84)
	func_def : VOID ID '(' ')' . $$6 compound_statement  (138)
	$$6 : .  (137)

	';'  shift 67
	'{'  reduce 137

	$$6  goto 68


state 37
	param_unit : var_type . ID  (87)

	ID  shift 69
	.  error


state 38
	func_decl : VOID ID '(' param_list . ')' ';'  (82)
	param_list : param_list . ',' param_unit  (85)
	func_def : VOID ID '(' param_list . ')' $$4 compound_statement  (134)

	')'  shift 70
	','  shift 71
	.  error


state 39
	param_list : param_unit .  (86)

	.  reduce 86


state 40
	const_decl : CONST var_type init_list ';' .  (80)

	.  reduce 80


state 41
	func_decl : var_type ID '(' ')' . ';'  (83)
	func_def : var_type ID '(' ')' . $$5 compound_statement  (136)
	$$5 : .  (135)

	';'  shift 72
	'{'  reduce 135

	$$5  goto 73


state 42
	func_decl : var_type ID '(' param_list . ')' ';'  (81)
	param_list : param_list . ',' param_unit  (85)
	func_def : var_type ID '(' param_list . ')' $$3 compound_statement  (132)

	')'  shift 74
	','  shift 71
	.  error


state 43
	arr_decl_list : '[' '+' . NUM_INT ']'  (71)

	NUM_INT  shift 75
	.  error


state 44
	arr_decl_list : '[' '-' . NUM_INT ']'  (73)

	NUM_INT  shift 76
	.  error


state 45
	arr_decl_list : '[' NUM_INT . ']'  (69)

	']'  shift 77
	.  error


state 46
	expr : INCRE . ID  (37)
	expr : INCRE . id_arr_access  (38)

	ID  shift 78
	.  error

	id_arr_access  goto 79


state 47
	expr : DECRE . ID  (41)
	expr : DECRE . id_arr_access  (42)

	ID  shift 80
	.  error

	id_arr_access  goto 81


state 48
	expr : '+' . expr  (35)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 82
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 49
	expr : '-' . expr  (36)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 83
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 50
	expr : '!' . expr  (33)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 84
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 51
	expr : '(' . expr ')'  (34)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 85
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 52
	expr : ID . INCRE  (39)
	expr : ID . DECRE  (43)
	expr : ID . '=' expr  (45)
	expr : ID .  (48)
	id_arr_access : ID . access_list  (51)
	func_invoc : ID . '(' argument_list ')'  (54)
	func_invoc : ID . '(' ')'  (55)

	INCRE  shift 86
	DECRE  shift 87
	'('  shift 88
	'['  shift 89
	'='  shift 90
	LESS_EQ  reduce 48
	GREAT_EQ  reduce 48
	EQUAL  reduce 48
	NOT_EQ  reduce 48
	LOG_AND  reduce 48
	LOG_OR  reduce 48
	'+'  reduce 48
	'-'  reduce 48
	'*'  reduce 48
	'/'  reduce 48
	'%'  reduce 48
	'<'  reduce 48
	'>'  reduce 48
	'&'  reduce 48
	'|'  reduce 48
	')'  reduce 48
	']'  reduce 48
	'}'  reduce 48
	';'  reduce 48
	','  reduce 48

	access_list  goto 91


state 53
	literal : NUM_INT .  (58)

	.  reduce 58


state 54
	literal : NUM_FLOATING .  (59)

	.  reduce 59


state 55
	literal : CHARACTER .  (60)

	.  reduce 60


state 56
	literal : STRING .  (61)

	.  reduce 61


state 57
	init_unit : ID '=' expr .  (17)
	expr : expr . '+' expr  (18)
	expr : expr . '-' expr  (19)
	expr : expr . '*' expr  (20)
	expr : expr . '/' expr  (21)
	expr : expr . '%' expr  (22)
	expr : expr . '<' expr  (23)
	expr : expr . LESS_EQ expr  (24)
	expr : expr . '>' expr  (25)
	expr : expr . GREAT_EQ expr  (26)
	expr : expr . EQUAL expr  (27)
	expr : expr . NOT_EQ expr  (28)
	expr : expr . LOG_AND expr  (29)
	expr : expr . LOG_OR expr  (30)
	expr : expr . '&' expr  (31)
	expr : expr . '|' expr  (32)

	LESS_EQ  shift 92
	GREAT_EQ  shift 93
	EQUAL  shift 94
	NOT_EQ  shift 95
	LOG_AND  shift 96
	LOG_OR  shift 97
	'+'  shift 98
	'-'  shift 99
	'*'  shift 100
	'/'  shift 101
	'%'  shift 102
	'<'  shift 103
	'>'  shift 104
	'&'  shift 105
	'|'  shift 106
	';'  reduce 17
	','  reduce 17


state 58
	expr : id_arr_access . INCRE  (40)
	expr : id_arr_access . DECRE  (44)
	expr : id_arr_access . '=' expr  (46)
	expr : id_arr_access .  (49)

	INCRE  shift 107
	DECRE  shift 108
	'='  shift 109
	LESS_EQ  reduce 49
	GREAT_EQ  reduce 49
	EQUAL  reduce 49
	NOT_EQ  reduce 49
	LOG_AND  reduce 49
	LOG_OR  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'%'  reduce 49
	'<'  reduce 49
	'>'  reduce 49
	'&'  reduce 49
	'|'  reduce 49
	')'  reduce 49
	']'  reduce 49
	'}'  reduce 49
	';'  reduce 49
	','  reduce 49


state 59
	expr : func_invoc .  (47)

	.  reduce 47


state 60
	expr : literal .  (50)

	.  reduce 50


state 61
	arr_decl_list : arr_decl_list '[' . NUM_INT ']'  (68)
	arr_decl_list : arr_decl_list '[' . '+' NUM_INT ']'  (70)
	arr_decl_list : arr_decl_list '[' . '-' NUM_INT ']'  (72)

	'+'  shift 110
	'-'  shift 111
	NUM_INT  shift 112
	.  error


state 62
	init_list : init_list ',' init_unit .  (15)

	.  reduce 15


state 63
	id_arr_decl : ID . arr_decl_list  (67)

	'['  shift 28
	.  error

	arr_decl_list  goto 30


state 64
	init_list_arr : init_list_arr ',' init_unit_arr .  (64)

	.  reduce 64


state 65
	arr_content : '{' . expr_list '}'  (74)
	arr_content : '{' . arr_content_list '}'  (75)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	'{'  shift 65
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 113
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60
	arr_content  goto 114
	expr_list  goto 115
	arr_content_list  goto 116


state 66
	init_unit_arr : id_arr_decl '=' arr_content .  (66)

	.  reduce 66


state 67
	func_decl : VOID ID '(' ')' ';' .  (84)

	.  reduce 84


state 68
	func_def : VOID ID '(' ')' $$6 . compound_statement  (138)

	'{'  shift 117
	.  error

	compound_statement  goto 118


state 69
	param_unit : var_type ID .  (87)

	.  reduce 87


state 70
	func_decl : VOID ID '(' param_list ')' . ';'  (82)
	func_def : VOID ID '(' param_list ')' . $$4 compound_statement  (134)
	$$4 : .  (133)

	';'  shift 119
	'{'  reduce 133

	$$4  goto 120


state 71
	param_list : param_list ',' . param_unit  (85)

	INT  shift 4
	FLOAT  shift 5
	CHAR  shift 6
	DOUBLE  shift 7
	.  error

	var_type  goto 37
	param_unit  goto 121


state 72
	func_decl : var_type ID '(' ')' ';' .  (83)

	.  reduce 83


state 73
	func_def : var_type ID '(' ')' $$5 . compound_statement  (136)

	'{'  shift 117
	.  error

	compound_statement  goto 122


state 74
	func_decl : var_type ID '(' param_list ')' . ';'  (81)
	func_def : var_type ID '(' param_list ')' . $$3 compound_statement  (132)
	$$3 : .  (131)

	';'  shift 123
	'{'  reduce 131

	$$3  goto 124


state 75
	arr_decl_list : '[' '+' NUM_INT . ']'  (71)

	']'  shift 125
	.  error


state 76
	arr_decl_list : '[' '-' NUM_INT . ']'  (73)

	']'  shift 126
	.  error


state 77
	arr_decl_list : '[' NUM_INT ']' .  (69)

	.  reduce 69


state 78
	expr : INCRE ID .  (37)
	id_arr_access : ID . access_list  (51)

	'['  shift 89
	LESS_EQ  reduce 37
	GREAT_EQ  reduce 37
	EQUAL  reduce 37
	NOT_EQ  reduce 37
	LOG_AND  reduce 37
	LOG_OR  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	'*'  reduce 37
	'/'  reduce 37
	'%'  reduce 37
	'<'  reduce 37
	'>'  reduce 37
	'&'  reduce 37
	'|'  reduce 37
	')'  reduce 37
	']'  reduce 37
	'}'  reduce 37
	';'  reduce 37
	','  reduce 37

	access_list  goto 91


state 79
	expr : INCRE id_arr_access .  (38)

	.  reduce 38


state 80
	expr : DECRE ID .  (41)
	id_arr_access : ID . access_list  (51)

	'['  shift 89
	LESS_EQ  reduce 41
	GREAT_EQ  reduce 41
	EQUAL  reduce 41
	NOT_EQ  reduce 41
	LOG_AND  reduce 41
	LOG_OR  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	'&'  reduce 41
	'|'  reduce 41
	')'  reduce 41
	']'  reduce 41
	'}'  reduce 41
	';'  reduce 41
	','  reduce 41

	access_list  goto 91


state 81
	expr : DECRE id_arr_access .  (42)

	.  reduce 42


state 82
	expr : expr . '+' expr  (18)
	expr : expr . '-' expr  (19)
	expr : expr . '*' expr  (20)
	expr : expr . '/' expr  (21)
	expr : expr . '%' expr  (22)
	expr : expr . '<' expr  (23)
	expr : expr . LESS_EQ expr  (24)
	expr : expr . '>' expr  (25)
	expr : expr . GREAT_EQ expr  (26)
	expr : expr . EQUAL expr  (27)
	expr : expr . NOT_EQ expr  (28)
	expr : expr . LOG_AND expr  (29)
	expr : expr . LOG_OR expr  (30)
	expr : expr . '&' expr  (31)
	expr : expr . '|' expr  (32)
	expr : '+' expr .  (35)

	.  reduce 35


state 83
	expr : expr . '+' expr  (18)
	expr : expr . '-' expr  (19)
	expr : expr . '*' expr  (20)
	expr : expr . '/' expr  (21)
	expr : expr . '%' expr  (22)
	expr : expr . '<' expr  (23)
	expr : expr . LESS_EQ expr  (24)
	expr : expr . '>' expr  (25)
	expr : expr . GREAT_EQ expr  (26)
	expr : expr . EQUAL expr  (27)
	expr : expr . NOT_EQ expr  (28)
	expr : expr . LOG_AND expr  (29)
	expr : expr . LOG_OR expr  (30)
	expr : expr . '&' expr  (31)
	expr : expr . '|' expr  (32)
	expr : '-' expr .  (36)

	.  reduce 36


state 84
	expr : expr . '+' expr  (18)
	expr : expr . '-' expr  (19)
	expr : expr . '*' expr  (20)
	expr : expr . '/' expr  (21)
	expr : expr . '%' expr  (22)
	expr : expr . '<' expr  (23)
	expr : expr . LESS_EQ expr  (24)
	expr : expr . '>' expr  (25)
	expr : expr . GREAT_EQ expr  (26)
	expr : expr . EQUAL expr  (27)
	expr : expr . NOT_EQ expr  (28)
	expr : expr . LOG_AND expr  (29)
	expr : expr . LOG_OR expr  (30)
	expr : expr . '&' expr  (31)
	expr : expr . '|' expr  (32)
	expr : '!' expr .  (33)

	.  reduce 33


state 85
	expr : expr . '+' expr  (18)
	expr : expr . '-' expr  (19)
	expr : expr . '*' expr  (20)
	expr : expr . '/' expr  (21)
	expr : expr . '%' expr  (22)
	expr : expr . '<' expr  (23)
	expr : expr . LESS_EQ expr  (24)
	expr : expr . '>' expr  (25)
	expr : expr . GREAT_EQ expr  (26)
	expr : expr . EQUAL expr  (27)
	expr : expr . NOT_EQ expr  (28)
	expr : expr . LOG_AND expr  (29)
	expr : expr . LOG_OR expr  (30)
	expr : expr . '&' expr  (31)
	expr : expr . '|' expr  (32)
	expr : '(' expr . ')'  (34)

	LESS_EQ  shift 92
	GREAT_EQ  shift 93
	EQUAL  shift 94
	NOT_EQ  shift 95
	LOG_AND  shift 96
	LOG_OR  shift 97
	'+'  shift 98
	'-'  shift 99
	'*'  shift 100
	'/'  shift 101
	'%'  shift 102
	'<'  shift 103
	'>'  shift 104
	'&'  shift 105
	'|'  shift 106
	')'  shift 127
	.  error


state 86
	expr : ID INCRE .  (39)

	.  reduce 39


state 87
	expr : ID DECRE .  (43)

	.  reduce 43


state 88
	func_invoc : ID '(' . argument_list ')'  (54)
	func_invoc : ID '(' . ')'  (55)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	')'  shift 128
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 129
	id_arr_access  goto 58
	func_invoc  goto 59
	argument_list  goto 130
	literal  goto 60


state 89
	access_list : '[' . expr ']'  (53)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 131
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 90
	expr : ID '=' . expr  (45)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 132
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 91
	id_arr_access : ID access_list .  (51)
	access_list : access_list . '[' expr ']'  (52)

	'['  shift 133
	INCRE  reduce 51
	DECRE  reduce 51
	LESS_EQ  reduce 51
	GREAT_EQ  reduce 51
	EQUAL  reduce 51
	NOT_EQ  reduce 51
	LOG_AND  reduce 51
	LOG_OR  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	'<'  reduce 51
	'>'  reduce 51
	'&'  reduce 51
	'|'  reduce 51
	')'  reduce 51
	']'  reduce 51
	'}'  reduce 51
	';'  reduce 51
	','  reduce 51
	'='  reduce 51


state 92
	expr : expr LESS_EQ . expr  (24)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 134
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 93
	expr : expr GREAT_EQ . expr  (26)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 135
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 94
	expr : expr EQUAL . expr  (27)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 136
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 95
	expr : expr NOT_EQ . expr  (28)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 137
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 96
	expr : expr LOG_AND . expr  (29)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 138
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 97
	expr : expr LOG_OR . expr  (30)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 139
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 98
	expr : expr '+' . expr  (18)

	INCRE  shift 46
	DECRE  shift 47
	'+'  shift 48
	'-'  shift 49
	'!'  shift 50
	'('  shift 51
	ID  shift 52
	NUM_INT  shift 53
	NUM_FLOATING  shift 54
	CHARACTER  shift 55
	STRING  shift 56
	.  error

	expr  goto 140
	id_arr_access  goto 58
	func_invoc  goto 59
	literal  goto 60


state 99
	expr : expr '-' . expr  (19)
